<resources>
    <string name="app_name">My Application</string>
    <string name="vehicle_price">Vehicle Price</string>
    <string name="downpayment">Downpayment</string>
    <string name="repayment">Repayment period (month)</string>
    <string name="interest_rate">interest rate (%)</string>
    <string name="salary">Salary</string>
    <string name="calculate">calculate</string>
    <string name="reset">reset</string>
    <string name="monthly_payment">Monthly payment</string>
    <string name="status">Status :</string>
    <string name="close">Close</string>
    <string name="approve">Approved</string>
    <string name="reject">Reject</string>


</resources>
